--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "sofa/eloquence-base": ">=5.5"
+        "sofa/eloquence-base": "@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -49,7 +49,7 @@
             ]
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "scripts": {
         "test": "phpunit && ./vendor/bin/phpcs src --standard=psr2 --report=diff --colors",
         "phpcs": "./vendor/bin/phpcs src --standard=psr2 --report=diff --colors"
